--- a/README
+++ b/README
@@ -1,9 +1,23 @@
 This is an implementation of an XMPP client in Javascript. It uses BOSH concept 
-of HTTP binding as defined by XEP-0124 and XEP-0206.
+of HTTP binding as defined by XEP-0124 and XEP-0206. 
+
+It is a semi-structured hack, assembled not so much as a planned effort by 
+a Javascript expert; it's more of a thing that's here just to serve its purpose,
+and that purpose is luckily for its internals to be pretty. So hacker: beware!
 
 Goal is to have a backend library for doing XMPP, and a separate GUI that will
 allow attaching an overlay over existing webpage, as well as almost transparent
 reconnection upon unloading the page and reloading it.
+
+Another goal is to support major standards-based browsers: Safari, Chrome,
+Opera, Firefox.
+
+It is expected that the client will cover at least XEP-0242: XMPP Client
+Compliance 2009 Core Client profile. Of course, almost anything goes that
+doesn't require out of bound connections (since they're a bit... tricky to do
+in Javascript, you'll surely agree).
+
+Patches and good natured criticism can be directed to ivan@vucica.net.
 
 (c) 2010 Ivan Vucica
 
